# bsdj

./: .gitignore  Cargo.toml  README.md  workspace.code-workspace
.cargo/: config.toml
assets/colorsets/: ami .colorset  crt .colorset  cute.colorset  gray.colorset  red .colorset  rgb .colorset
assets/fonts/: glyphs.tilesprite  lower.tilesprite  lowr.tilesprite
assets/glyphs/: dflt.tilesprite
assets/map/: map.tilesprite
crates/input_mapper/: Cargo.toml
crates/input_mapper/src/: Format.txt  input_handler.rs  inputs.rs  lib.rs  x.rs
crates/input_mapper/src/input_parser/: keyboard.rs  mod.rs  mouse.rs
src/: main.rs  states.rs
src/events/: heading_text.rs  mod.rs
src/game/: mod.rs
src/main_menu/: mod.rs
src/meta_actions/: mod.rs  resize.rs  switch_appearance.rs
src/resources/: edited.rs  edited_chain.rs  edited_instrument.rs  input.rs  mod.rs  nav_cursor.rs  song_cursor.rs
src/resources/cursors/: chain.rs  mod.rs  nav.rs  phrase.rs  song.rs
src/resources/types/: chain.rs  channel.rs  command.rs  instrument.rs  mod.rs  note.rs  phrase.rs
src/scenes/: chain.rs  file.rs  groove.rs  help.rs  instrument.rs  live.rs  mod.rs  navbar.rs  phrase.rs  project.rs  sidebar.rs  song.rs  speech.rs  synth.rs  table.rs  wave.rs  word.rs
src/tilerender/: cluster.rs  colors.rs  colorset.rs  init_renderer.rs  layer_handler.rs  map_renderer.rs  mod.rs  parse_colorset.rs  parse_tilesprite.rs  tilelayer.rs  tilerenderer.rs  tilesprite.rs  tr_error.rs  ui_renderer.rs  workings.pdn
src/utils/: clamp.rs  mod.rs  position.rs  sized_headed_array.rs  u8_utils.rs
