[package]
name = "bsdj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# input_mapper = { path = "./crates/input_mapper", version = "0.1.0" }
image = "*"
wgpu = "*"
thiserror = "*"
console_error_panic_hook = "0.1"

[dependencies.bevy]
version = "0.6.0"
default-features = false
features = ["wayland", "render"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
